 * #1000 (SaltelliSensitivityAlgorithm with LowDiscrepancyExperiment produces wrong results)
 * #1005 (The stopping criteria of SobolSimulationAlgorithm is weird)
 * #1024 (The unary operator is undefined for Normal distribution)
 * #1025 (Empty throw in PythonWrappingFunctions)
 * #1028 (Build fails with clang-60: token is not a valid binary operator in a preprocessor subexpression)
 * #1035 (ProbabilitySimulationResult does not provide the distribution of the probability)
 * #1043 (The DrawSobolIndices doc is wrong)
 * #1045 (LowDiscrepancyExperiment/ComposedCopula correlation across blocks ?)
 * #1051 (The default value of computeSecondOrder in SobolIndicesExperiment should be False)
 * #1054 (Optimization algorithms ignore MaxEvaluationNumber parameter)
 * #1057 (FittingTest.BestModelBIC to return bic value)
 * #1064 (The summary of a FunctionalChaosSobolIndices fails with more than 14 dimensions)

== 1.12 release (2018-11-08) == #release-1.12

=== Library ===

==== Major changes ====
 * FieldFunction and co knows its input/output meshes before evaluation
 * SobolSequence has been extended from maximum dimension 40 to 1111
 * Parametrized statistical tests by first kind risk instead of 1-risk
 * FittingTest now compute a correct p-value in Kolmogorov tests even if the parameters are estimated from the tested sample
 * Completed documentation migration with process content

==== New classes ====
 * ProbabilitySimulationResult
 * ExpectationSimulationAlgorithm, ExpectationSimulationResult
 * ExtremeValueCopula
 * ChaospyDistribution
 * SobolSimulationAlgorithm, SobolSimulationResult
 * FractionalBrownianMotionModel

==== API changes ====
 * Removed deprecated MonteCarlo, ImportanceSampling, QuasiMonteCarlo, RandomizedQuasiMonteCarlo, RandomizedLHS classes
 * Removed deprecated Field::getDimension, getSpatialDimension, getSpatialMean, getTemporalMean methods
 * Remove deprecated Process::getDimension, getSpatialDimension methods