@@ -7,20 +7,35 @@ Available constructors:
 Parameters
 ----------
 mu : float
-    Mean.
+    The mean of the log-normal random variable.
 sigma : float
-    Standard deviation :math:`\sigma > 0`.
+    The standard deviation of the log-normal random variable, with:math:`\sigma > 0`.
 gamma : float, optional
     Shift parameter.
 
 Notes
 -----
-The native parameters are defined as follows:
+The :math:`\mu` (resp. :math:`\sigma`) parameter is 
+the mean (resp. the standard deviation) of the log-normal 
+random variable, i.e. 
 
 .. math::
 
-    \sigma_l &= \sqrt{\log{ \left( 1+\frac{\sigma^2}{(\mu-\gamma)^2} \right) }} \\
-    \mu_l &= \log{(\mu-\gamma)} - \frac{\sigma_l^2}{2}
+    \Expect{X} &= \mu \\
+    \Var{X} &= \sigma^2
+
+where :math:`X` is the log-normal random variable. 
+
+The native parameters are :math:`\mu_\ell` 
+and :math:`\sigma_\ell`, which are the mean and 
+standard deviation of the logarithm of the log-normal variable, 
+i.e. the parameters of the associated normal variable.
+They are defined as follows:
+
+.. math::
+
+    \sigma_\ell &= \sqrt{\log{ \left( 1+\frac{\sigma^2}{(\mu-\gamma)^2} \right) }} \\
+    \mu_\ell &= \log{(\mu-\gamma)} - \frac{\sigma_\ell^2}{2}
 
 See also
 --------
