@@ -54,6 +54,7 @@
  * #1024 (The unary operator is undefined for Normal distribution)
  * #1025 (Empty throw in PythonWrappingFunctions)
  * #1028 (Build fails with clang-60: token is not a valid binary operator in a preprocessor subexpression)
+ * #1031 (The doc for LogNormal and LogNormalMuSigma is confusing )
  * #1035 (ProbabilitySimulationResult does not provide the distribution of the probability)
  * #1043 (The DrawSobolIndices doc is wrong)
  * #1045 (LowDiscrepancyExperiment/ComposedCopula correlation across blocks ?)
